要約表示を時系列順に変更（お客様→社内メモ→OP返信の実際の順序で表示）

--- a/zendesk-app/manifest.json
+++ b/zendesk-app/manifest.json
@@ -30,9 +30,17 @@
       "required": false,
       "secure": true,
       "default": ""
+    },
+    {
+      "name": "openai_api_key",
+      "type": "text",
+      "required": false,
+      "secure": true,
+      "default": ""
     }
   ],
   "domainWhitelist": [
-    "*.execute-api.*.amazonaws.com"
+    "*.execute-api.*.amazonaws.com",
+    "api.openai.com"
   ]
 }
